cncProd/force-app/main/default/objects/Case/fields/Service_Code__c.field-meta.xml
<CustomField>
    <fullName>Service_Code__c</fullName>
    <label>Service Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lubrication (Service A)</fullName>
            </value>
            <value>
                <fullName>Lubrication (Service A) Express</fullName>
            </value>
            <value>
                <fullName>Maintenance (Service B)</fullName>
            </value>
            <value>
                <fullName>Maintenance (Service B) Express</fullName>
            </value>
            <value>
                <fullName>Major (Service C)</fullName>
            </value>
            <value>
                <fullName>Repairs</fullName>
            </value>
            <value>
                <fullName>Front Brake Pads Change - Express</fullName>
            </value>
            <value>
                <fullName>Rear Brake Pads Change - Express</fullName>
            </value>
            <value>
                <fullName>Main Car Battery Change - Express</fullName>
            </value>
            <value>
                <fullName>Brake Safety Check &amp; Service - Express</fullName>
            </value>
            <value>
                <fullName>Express Grooming</fullName>
            </value>
            <value>
                <fullName>Standard Grooming</fullName>
            </value>
            <value>
                <fullName>Luxury Grooming</fullName>
            </value>
            <value>
                <fullName>Total Paint Protection</fullName>
            </value>
            <value>
                <fullName>Wheel Protection</fullName>
            </value>
            <value>
                <fullName>Pre-Holiday Inspection - Express</fullName>
            </value>
            <value>
                <fullName>Pre-LTA Inspection - Express</fullName>
            </value>
            <value>
                <fullName>Insurance Assessment and Claims</fullName>
            </value>
            <value>
                <fullName>Body &amp; Paint Repair</fullName>
            </value>
            <value>
                <fullName>Lubrication Service</fullName>
            </value>
            <value>
                <fullName>Maintenance Service</fullName>
            </value>
            <value>
                <fullName>Full Maintenance Service</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Mercedes-Benz Paint Protection System</fullName>
            </value>
            <value>
                <fullName>Star Polish</fullName>
            </value>
            <value>
                <fullName>Star Interior</fullName>
            </value>
            <value>
                <fullName>Total Grooming Package</fullName>
            </value>
            <value>
                <fullName>Star Glaze</fullName>
            </value>
            <value>
                <fullName>Star Wax</fullName>
            </value>
            <value>
                <fullName>Express Lubrication Service ONLY</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>