cncProd/force-app/main/default/objects/Case/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <label>Service Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Regular Service &amp; Repair</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>