cncProd/force-app/main/default/objects/Case/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service and Repairs</fullName>
            </value>
            <value>
                <fullName>Grooming - MB</fullName>
            </value>
            <value>
                <fullName>Inspection</fullName>
            </value>
            <value>
                <fullName>Body &amp; Paint</fullName>
            </value>
            <value>
                <fullName>Personal Consultation</fullName>
            </value>
            <value>
                <fullName>Express Servicing</fullName>
            </value>
            <value>
                <fullName>Express Maintenance</fullName>
            </value>
            <value>
                <fullName>Body Repair</fullName>
            </value>
            <value>
                <fullName>Grooming - MF</fullName>
            </value>
            <value>
                <fullName>Enquiry – Follow up required</fullName>
            </value>
            <value>
                <fullName>Enquiry – No Follow up required</fullName>
            </value>
            <value>
                <fullName>Complain – Follow up required</fullName>
            </value>
            <value>
                <fullName>Complain – No Follow up required</fullName>
            </value>
            <value>
                <fullName>Compliment – Follow up required   *** Note: No fourth selection required</fullName>
            </value>
            <value>
                <fullName>Compliment – No Follow up required   *** Note: No fourth selection required</fullName>
            </value>
            <value>
                <fullName>Digital / IT related - Follow up required   *** Note: No fourth selection required</fullName>
            </value>
            <value>
                <fullName>Digital / IT related - No Follow up required   *** Note: No fourth selection required</fullName>
            </value>
            <value>
                <fullName>Survey – Kia Dealer - Level Customer Satisfaction Index (DCSI) survey  *** Note: No fourth selection required</fullName>
            </value>
            <value>
                <fullName>Survey – MB Aftersales CSI    *** Note: No fourth selection required</fullName>
            </value>
            <value>
                <fullName>Survey – MB Sales CLI    *** Note: No fourth selection required</fullName>
            </value>
            <value>
                <fullName>Survey – MB Sales CSI    *** Note: No fourth selection required</fullName>
            </value>
            <value>
                <fullName>MB Service Follow Up   *** Note: No fourth selection required</fullName>
            </value>
            <value>
                <fullName>Textbox for user to input the selection of “Others – Please Specify”    *** Note: No fourth selection required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>