cncProd/force-app/main/default/objects/Case/fields/SEX__c.field-meta.xml
<CustomField>
    <fullName>SEX__c</fullName>
    <label>SEX</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>FEMALE</fullName>
            </value>
            <value>
                <fullName>MALE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>