cncProd/force-app/main/default/objects/Case/fields/SFU_Q1_Ans_scale__c.field-meta.xml
<CustomField>
    <fullName>SFU_Q1_Ans_scale__c</fullName>
    <formula>TEXT(SFU_Q1_Ans__c) + &apos;/&apos; + TEXT(SFU_Q1_Scale__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SFU Q1 Ans scale</label>
    <type>Text</type>
</CustomField>