cncProd/force-app/main/default/objects/Case/fields/SFU_Q1_Scale__c.field-meta.xml
<CustomField>
    <fullName>SFU_Q1_Scale__c</fullName>
    <label>SFU Q1 Scale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
                <default>true</default>
                <label>5</label>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>