cncProd/force-app/main/default/objects/Case/fields/SMS_Link_Expired__c.field-meta.xml
<CustomField>
    <fullName>SMS_Link_Expired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Link Expired</label>
    <type>Checkbox</type>
</CustomField>