cncProd/force-app/main/default/objects/Case/fields/Source_of_Problem_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Problem_Remarks__c</fullName>
    <label>Source of Problem Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>