cncProd/force-app/main/default/objects/Case/fields/Submitted_By_Agent__c.field-meta.xml
<CustomField>
    <fullName>Submitted_By_Agent__c</fullName>
    <label>Submitted By Agent</label>
    <length>5</length>
    <type>Text</type>
</CustomField>