cncProd/force-app/main/default/objects/Case/fields/Survey_Call_Log__c.field-meta.xml
<CustomField>
    <fullName>Survey_Call_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Call Log</label>
    <referenceTo>Survey_Call_Log__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>