cncProd/force-app/main/default/objects/Case/fields/Survey_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Submission_Date__c</fullName>
    <label>Survey Submission Date</label>
    <type>DateTime</type>
</CustomField>