cncProd/force-app/main/default/objects/Case/fields/Survey_Submitted_Time__c.field-meta.xml
<CustomField>
    <fullName>Survey_Submitted_Time__c</fullName>
    <formula>MID(TEXT( Survey_Submission_Date__c  + 0.3333), 12, 5)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Submitted Time</label>
    <type>Text</type>
</CustomField>