cncProd/force-app/main/default/objects/Case/fields/Technician_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Technician_Arrival_Date__c</fullName>
    <label>Technician Arrival Date</label>
    <type>Date</type>
</CustomField>