cncProd/force-app/main/default/objects/Case/fields/Technician_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Technician_Completion_Date__c</fullName>
    <label>Technician Completion Date</label>
    <type>Date</type>
</CustomField>