cncProd/force-app/main/default/objects/Case/fields/Technician_Completion_Time__c.field-meta.xml
<CustomField>
    <fullName>Technician_Completion_Time__c</fullName>
    <label>Technician Completion Time</label>
    <type>Time</type>
</CustomField>