cncProd/force-app/main/default/objects/Case/fields/To_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>To_Date_Formula__c</fullName>
    <formula>DATE(VALUE(RIGHT(   ToDate__c  , 4)), VALUE(LEFT(ToDate__c, 2)), VALUE(MID(ToDate__c, 4, 2)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>To Date</label>
    <type>Date</type>
</CustomField>