cncProd/force-app/main/default/objects/Case/fields/TODrive__c.field-meta.xml
<CustomField>
    <fullName>TODrive__c</fullName>
    <label>TODrive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Location 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>