cncProd/force-app/main/default/objects/Case/fields/Tow_Location__c.field-meta.xml
<CustomField>
    <fullName>Tow_Location__c</fullName>
    <label>Tow Location</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>MB PL</fullName>
            </value>
            <value>
                <fullName>MB MBC</fullName>
            </value>
            <value>
                <fullName>MB EL</fullName>
            </value>
            <value>
                <fullName>MF PG</fullName>
            </value>
            <value>
                <fullName>MF LK</fullName>
            </value>
            <value>
                <fullName>MF EL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>