cncProd/force-app/main/default/objects/Case/fields/Tow_Service__c.field-meta.xml
<CustomField>
    <fullName>Tow_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tow Service</label>
    <type>Checkbox</type>
</CustomField>