cncProd/force-app/main/default/objects/Case/fields/Tow_Service_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Tow_Service_Activation_Date__c</fullName>
    <formula>DATEVALUE(MID(TEXT( Tow_Service_Activation_Date_Time__c ),1,10))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tow Service Activation Date</label>
    <type>Date</type>
</CustomField>