cncProd/force-app/main/default/objects/Case/fields/Tow_Service_Activation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Tow_Service_Activation_Date_Time__c</fullName>
    <label>Tow Service Activation Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>