cncProd/force-app/main/default/objects/Case/fields/Tow_Service_Activation_Time__c.field-meta.xml
<CustomField>
    <fullName>Tow_Service_Activation_Time__c</fullName>
    <formula>TIMEVALUE(MID(TEXT(  Tow_Service_Activation_Date_Time__c  ),12,5))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tow Service Activation Time</label>
    <type>Time</type>
</CustomField>