cncProd/force-app/main/default/objects/Case/fields/Tow_Service_Arrival_Date__c.field-meta.xml
<CustomField>
    <fullName>Tow_Service_Arrival_Date__c</fullName>
    <label>Tow Service Arrival Date</label>
    <type>Date</type>
</CustomField>