cncProd/force-app/main/default/objects/Case/fields/Tow_Service_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Tow_Service_Completion_Date__c</fullName>
    <label>Tow Service Completion Date</label>
    <type>Date</type>
</CustomField>