cncProd/force-app/main/default/objects/Case/fields/Tow_Service_Duty_Team__c.field-meta.xml
<CustomField>
    <fullName>Tow_Service_Duty_Team__c</fullName>
    <label>Tow Service Duty Team</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>AAS</fullName>
            </value>
            <value>
                <fullName>EBR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>