cncProd/force-app/main/default/objects/Case/fields/Wheel_Drive__c.field-meta.xml
<CustomField>
    <fullName>Wheel_Drive__c</fullName>
    <label>Wheel Drive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
                <default>true</default>
                <label>None</label>
            </value>
            <value>
                <fullName>Front</fullName>
            </value>
            <value>
                <fullName>Rear</fullName>
            </value>
            <value>
                <fullName>4WD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>