cncProd/force-app/main/default/objects/Case/recordTypes/Digital.recordType-meta.xml
<RecordType>
    <fullName>Digital</fullName>
    <active>true</active>
    <businessProcess>Client Engagement Status</businessProcess>
    <label>Digital</label>
</RecordType>