cncProd/force-app/main/default/objects/Case/recordTypes/Promotions.recordType-meta.xml
<RecordType>
    <fullName>Promotions</fullName>
    <active>true</active>
    <businessProcess>Client Engagement Status</businessProcess>
    <label>Promotions/Campaigns</label>
</RecordType>