cncProd/force-app/main/default/objects/Case/recordTypes/Servicing_and_Grooming.recordType-meta.xml
<RecordType>
    <fullName>Servicing_and_Grooming</fullName>
    <active>true</active>
    <businessProcess>Client Engagement Status</businessProcess>
    <label>Servicing and Grooming</label>
</RecordType>