cncProd/force-app/main/default/objects/Case/validationRules/Check_Status_field_for_CLOSED.validationRule-meta.xml
<ValidationRule>
    <fullName>Check_Status_field_for_CLOSED</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    $UserRole.Name &lt;&gt; &quot;CAC Manager&quot;,
    Record_Locked__c = true,
				$Profile.Name &lt;&gt; &quot;System Administrator&quot;,
				NOT( $Setup.Bypass_Automation_Settings__c.Bypass_Validation_Rules__c )
)</errorConditionFormula>
    <errorMessage>You are not allowed to Edit when the Case is CLOSED</errorMessage>
</ValidationRule>