cncProd/force-app/main/default/objects/Case/validationRules/Remarks_for_Goodwill_if_Yes.validationRule-meta.xml
<ValidationRule>
    <fullName>Remarks_for_Goodwill_if_Yes</fullName>
    <active>true</active>
    <errorConditionFormula>AND(RecordTypeId = &apos;0122x000000GskW&apos;,ISPICKVAL(Goodwill__c, &apos;Yes&apos;),LEN(Specify_goodwill_given_If_any__c)=0
)</errorConditionFormula>
    <errorDisplayField>Specify_goodwill_given_If_any__c</errorDisplayField>
    <errorMessage>Please specify goodwill given.</errorMessage>
</ValidationRule>