cncProd/force-app/main/default/objects/Case/listViews/All_Closed_Survey.listView-meta.xml
<ListView>
    <fullName>All_Closed_Survey</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Franchise__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Internal_Comments__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>Survey_Type__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>Survey_Status__c</columns>
    <columns>Case_Category__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Surveys</value>
    </filters>
    <filters>
        <field>Survey_Type__c</field>
        <operation>contains</operation>
        <value>SFU</value>
    </filters>
    <label>All Closed Survey</label>
    <sharedTo>
        <role>CAC_Manager</role>
        <role>CAC_Service_Agent</role>
    </sharedTo>
</ListView>