cncProd/force-app/main/default/objects/Case/listViews/All_Complaints_and_Compliments.listView-meta.xml
<ListView>
    <fullName>All_Complaints_and_Compliments</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Complaint__c</columns>
    <columns>Compliment__c</columns>
    <columns>Complain_Compliement__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Complaint,Case.Compliment</value>
    </filters>
    <label>All Complaints and Compliments</label>
</ListView>