cncProd/force-app/main/default/objects/Case/listViews/All_Open_Booking_List.listView-meta.xml
<ListView>
    <fullName>All_Open_Booking_List</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Case_Category__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Location__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CLBL_Appointment_Date__c</columns>
    <columns>SMS_Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Servicing_and_Grooming</value>
    </filters>
    <filters>
        <field>Case_Category__c</field>
        <operation>equals</operation>
        <value>Booking List</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Open Booking List</label>
</ListView>