cncProd/force-app/main/default/objects/Case/listViews/All_Open_Created_List.listView-meta.xml
<ListView>
    <fullName>All_Open_Created_List</fullName>
    <columns>CLBL_Created_Date__c</columns>
    <columns>CLBL_Appointment_Date__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Case_Category__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Customer_Remarks__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>PKD__c</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>SCRS_PKD_Pickup_Location__c</columns>
    <columns>Internal_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Servicing_and_Grooming</value>
    </filters>
    <filters>
        <field>Case_Category__c</field>
        <operation>equals</operation>
        <value>Created List</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE_DATE_ONLY</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All Open Created List</label>
</ListView>