cncProd/force-app/main/default/objects/Case/listViews/Booking_List_CaseTest.listView-meta.xml
<ListView>
    <fullName>Booking_List_CaseTest</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Booking_ID__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Case_Category__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Location__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>Response_from_CBS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Servicing_and_Grooming</value>
    </filters>
    <filters>
        <field>Case_Category__c</field>
        <operation>equals</operation>
        <value>Booking List</value>
    </filters>
    <filters>
        <field>SMS_Status__c</field>
        <operation>equals</operation>
        <value>Cancel Appointment</value>
    </filters>
    <label>_Booking List Test</label>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>