cncProd/force-app/main/default/objects/Case/listViews/Cases_Assign_to_Particular_user.listView-meta.xml
<ListView>
    <fullName>Cases_Assign_to_Particular_user</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Is_Submitted_For_Approval__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Case_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OWNER_NAME</field>
        <operation>contains</operation>
        <value>system</value>
    </filters>
    <label>Cases Assign to Particular user</label>
</ListView>