cncProd/force-app/main/default/objects/Case/listViews/Cases_with_Survey_Call_Log.listView-meta.xml
<ListView>
    <fullName>Cases_with_Survey_Call_Log</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Phone_1__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Survey_Type__c</field>
        <operation>equals</operation>
        <value>SFU</value>
    </filters>
    <label>Cases with Survey Call Log</label>
</ListView>