cncProd/force-app/main/default/objects/Case/listViews/CBS_TestIssue.listView-meta.xml
<ListView>
    <fullName>CBS_TestIssue</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Booking_ID_Text__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Case_Category__c</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Location__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>SMS_Status__c</columns>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Servicing_and_Grooming</value>
    </filters>
    <filters>
        <field>SMS_Status__c</field>
        <operation>equals</operation>
        <value>Confirm Appointment</value>
    </filters>
    <filters>
        <field>CASES.LAST_UPDATE_DATE_ONLY</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>CBS_TestIssue</label>
</ListView>