cncProd/force-app/main/default/objects/Case/listViews/Copy_of_All_Open_Cases.listView-meta.xml
<ListView>
    <fullName>Copy_of_All_Open_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>Franchise__c</columns>
    <columns>Registered_Vehicle__c</columns>
    <columns>Internal_Comments__c</columns>
    <columns>CASES.RECORDTYPE</columns>
    <columns>CASES.STATUS</columns>
    <columns>Case_Category__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>Survey_Type__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Assigned_Date_Time__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Email Auto Assignment Queue</value>
    </filters>
    <label>Copy of All Open Cases</label>
</ListView>